# ai-trade

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  MANIFEST.in  NOTICE  PRODUCT.md  README.md  SECURITY.md  compose.bind.yaml  compose.yaml  docker.env.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-pages.yml
.impeccable/: design.json
adapters/qmt/: README.md  pyproject.toml
adapters/qmt/src/ai_trade_qmt/: __init__.py  adapter.py
config/: default.json  security_master.json
docs/: AI_ASSISTANT.md  ARCHITECTURE.md  BROKER_ADAPTERS.md  CAPITAL_FLOW.md  CLOUD_STORAGE.md  CROSS_SOURCE_AUDIT.md  DATA_PROVIDERS.md  DOCKER_DEPLOYMENT.md  ECOSYSTEM.md  HYPOTHESIS_LAB.md  MARKET_BREADTH.md  MARKET_INTELLIGENCE.md  MONITORING.md  PAPER_TRADING.md  RESEARCH_DIGESTS.md  RESEARCH_JOURNAL.md  RESEARCH_METHODOLOGY.md  UNIVERSE.md  UNIVERSE_SCREENING.md
scripts/: bootstrap.ps1  configure_ai.ps1  configure_cloud.ps1  configure_notifications.ps1  docker-entrypoint.sh  install_archive_task.ps1  install_monitor_task.ps1  install_paper_task.ps1  run_daily_archive.ps1  run_daily_monitor.ps1  run_daily_paper.ps1  verify_distribution.py
site/: index.html  styles.css
src/ai_trade/: __init__.py  backtest.py  cli.py  cloud.py  cloud_usage.py  config.py  default_config.json  diagnostics.py  execution.py  json_utils.py  metrics.py  models.py  monitoring.py  notification_channels.py  notification_delivery.py  report.py  research_archive.py  research_digest.py  research_digest_cloud.py  research_epochs.py  research_journal.py  security.py  strategy.py  validation.py  walk_forward.py
src/ai_trade/assistant/: __init__.py  debate.py  engine.py  features.py  governance.py  provider.py  store.py
src/ai_trade/broker/: __init__.py  base.py  ledger.py  lifecycle.py  live.py  live_guard.py  mandate.py  paper.py  paper_audit.py  probe.py  reconciliation.py  runtime.py  scope.py  shadow.py
src/ai_trade/data/: __init__.py  cache_snapshot.py  capital_flow.py  cross_check.py  disclosures.py  eastmoney.py  evidence_io.py  fundamentals.py  intraday.py  market.py  market_breadth.py  market_intelligence.py  news.py  order_book.py  providers.py  tencent.py  tushare.py  tushare_reference.py  valuation.py  yahoo.py
src/ai_trade/hypothesis_lab/: __init__.py  engine.py  schema.py  store.py
src/ai_trade/strategy_lab/: __init__.py  engine.py  lifecycle.py  schema.py  store.py
src/ai_trade/web/: __init__.py  auth.py  jobs.py  screener.py  server.py  service.py
src/ai_trade/web/assets/: __init__.py  app.css  app.js  auth.css  auth.js  index.html  login.html
tests/: test_assistant.py  test_assistant_governance.py  test_backtest.py  test_broker.py  test_broker_ledger_scope.py  test_broker_lifecycle.py  test_broker_lifecycle_model.py  test_broker_mandate.py  test_broker_probe.py  test_broker_reconciliation.py  test_cache_snapshot.py  test_capital_flow.py  test_cli.py  test_cloud.py  test_cloud_usage.py  test_cross_check.py  test_data.py  test_data_providers.py  test_disclosures.py  test_distribution.py  test_docker.py  test_eastmoney_transport.py  test_evidence_io.py  test_execution.py  test_fundamentals.py  test_hypothesis_cli.py  test_hypothesis_lab.py  test_intraday.py  test_market_breadth.py  test_market_intelligence.py  test_metrics.py  test_monitoring.py  test_news.py  test_notification_channels.py  test_notification_delivery.py  test_order_book.py  test_paper.py  test_qmt_adapter.py  test_research_archive.py  test_research_digest.py  (+38 more)
