[build-system]
requires = ["setuptools==82.0.1", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trade-qmt"
version = "0.2.0"
description = "Read-only QMT/xtquant observation adapter for AI Trade"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ai-trade>=0.13.0,<0.14"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Shiraikuroko123"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.entry-points."ai_trade.brokers"]
qmt-readonly = "ai_trade_qmt:create_broker"

[project.entry-points."ai_trade.broker_capabilities"]
qmt-readonly = "ai_trade_qmt:broker_capabilities"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
